--- a/draft/bachelorproef.tex
+++ b/draft/bachelorproef.tex
@@ -282,7 +282,7 @@ Online adverteren of online marketing, is een vorm van reclame die het internet 
 In 1994, in de dagen dat men moest inbellen om connectie te maken tot het internet, verscheen, op het eerste online magazine genaamd Hotwire, een schijnbaar onschuldige afbeelding. Dit statisch beeld was waarschijnlijk de eerste advertentie in zijn soort op het internet. Gebruikers die op de afbeelding klikten werden rechtstreeks doorverwezen naar site van de adverteerder. Deze banneradvertentie toonde de interactiviteit van het internet waar traditionele, éénrichtingsmedia zoals tv, radio en kranten te kort schoten. Adverteerders sprongen snel op de kar van online reclame en in 1999 bereikte de globale advertentie uitgaven de piek van een miljard dollar.
 \begin{figure}[h!]
 \centering
-\includegraphics[width=7cm]{img/firstbanner}
+\includegraphics[width=12cm]{img/firstbanner}
 \caption{De eerste reclame banner in 1994 op de site van het magazine Hotwire}
 \label{fig: Banner-Ads}
 \end{figure}
@@ -294,16 +294,16 @@ Doordat zowel bedrijven als consumenten in grote getallen naar het internet kwam
 \\
 Een volgende stap in de evolutie om advertenties bij het juist doelpubliek te brengen was programmatic buying of programmatisch kopen. Dit is het principe van realtime bieden op advertentie ruimte om een specifieke advertentie te tonen aan een bepaalde consument en in een specifieke context. Dit wordt op grote schaal mogelijk gemaakt door allerhande algoritmes die het surfgedrag van de consument analyseren, informatie die onder meer afkomstig is van cookies en van big data.
 \\
-Het is mede door de exponentiële groei sinds de eerste advertenties, en soms slechte kwaliteit van reclame geleverd door de netwerken dat eerste ad blockers in 2006 het licht zagen. Daarnaast groeide het wantrouwen van de gebruiker over wat de adverteerders met hun persoonlijke informatie deden, op die nood aan privacy brachten de ad blockers ook antwoord.
+Het is mede door de exponentiële groei sinds de eerste advertenties, en soms slechte kwaliteit van reclame geleverd door de netwerken dat eerste ad blockers in 2006 het licht zagen. Daarnaast groeide het wantrouwen van de gebruiker over wat de adverteerders met hun persoonlijke informatie deden, op die nood aan privacy brachten de ad blockers ook een antwoord.
 
-\section{Gebruikte technologie}
-\label{sec:Gebruikte technologie}
-\subsection{Banner advertising }
-\label{sec Banner advertising }
-Banners zijn reclame afbeeldingen die meestal getoond worden aan de randen van een webpagina voornamelijk aan de bovenkant en de zijkant \ref{fig: Banner-Ads} . Ze zijn vooral te vinden in nieuws websites en blogs. Ze zijn gemakkelijk te implementeren en te onderhouden. De advertenties van de banners komen meestal van reclame netwerken maar kunnen ook door eigenaars van de website beheerd en verkocht worden zoals men bij een papieren krant doet. De normale banner heeft maar een door klik percentage van 0.27\% wat laag is \cite{Chaffey2016}. Maar voor veel bedrijven zijn zaken zoals naamsbekendheid even belangrijk, bij reclame borden langs de weg of bij tv-reclame kan men namelijk ook niet doorklikken en die bestaan ook nog steeds. Door het lage doorklik percentage wordt de kostprijs van de advertentie niet bepaald aan de hand van het PPC-model maar wel aan de hand van de views. 
+\section{Soorten reclame}
+\label{sec:Soorten reclame}
+\subsection{Banner en display advertising }
+\label{sec Banner en display advertising }
+Banners zijn reclame afbeeldingen die meestal getoond worden aan de randen van een webpagina voornamelijk aan de bovenkant en de zijkant \ref{fig: Banner-Ads}. Ze zijn vooral te vinden in nieuws websites en blogs. Ze zijn gemakkelijk te implementeren en te onderhouden. De advertenties van de banners komen meestal van reclame netwerken maar kunnen ook door eigenaars van de website beheerd en verkocht worden zoals men bij een papieren krant doet. De normale banner heeft maar een door klik percentage van 0.27\% wat laag is \cite{Chaffey2016}. Maar voor veel bedrijven zijn zaken zoals naamsbekendheid even belangrijk, bij reclame borden langs de weg of bij tv-reclame kan men namelijk ook niet doorklikken en die bestaan ook nog steeds. Door het lage doorklik percentage wordt de kostprijs van de advertentie niet bepaald aan de hand van het PPC-model maar wel aan de hand van de views. Met banners worden voornamelijk statische afbeeldingen bedoeld, wanneer er aan video of geluid fragmenten op de plaats van een banner staat spreekt men van display advertising, de overkoepelende term waar statische banners ook onder vallen.
 \begin{figure}[h!]
 \centering
-\includegraphics[width=7cm]{img/Banner-Ads}
+\includegraphics[width=12cm]{img/Banner-Ads}
 \caption{Voorbeeld van banner ads}
 \label{fig: Banner-Ads}
 \end{figure}
@@ -312,21 +312,27 @@ Banners zijn reclame afbeeldingen die meestal getoond worden aan de randen van e
 Google Search reclame zijn reclame blokken die getoond worden samen met de zoek resultaten van een Google zoek opdracht, figuur:\ref{fig: Google-Search-ad}. Deze is reclame is PPC of Pay per click wat wil zeggen dat de adverteerders betalen per keer dat er op de reclame geklikt wordt. Deze reclame wordt beheerd door het Google’s AdWords platform, dat adverteerders toelaat te bieden op sleutelwoorden. Andere zoekrobotten zoals Bing en Yahoo! hebben een gelijkaardig programma.
 \begin{figure}[h!]
 \centering
-\includegraphics[width=7cm]{img/example-of-google-ads}
+\includegraphics[width=12cm]{img/example-of-google-ads}
 \caption{Voorbeeld van Google search ads}
 \label{fig: Google-Search-ad}
 \end{figure}
-
+\subsection{Retargeting advertenties }
+\label{sec Retargeting advertenties }
+Retargeting advertenties houden rekening met de surfgeschiedenis van een gebruiker. Als een gebruiker een website bezoekt zoals Amazon of bol.com kan er een cookie gedownload worden die gebruiker volgt doorheen zijn surfsessie. Wanneer de gebruiker die site verlaat en andere websites bezoekt, zal die cookie het bezoek aan Amazon of bol.com verzenden naar reclame blokken op die andere websites. De adverteerders kunnen nu reclame maken over het product waar de gebruiker oorspronkelijk op zoek naar was op Amazon of met behulp van recommendation software gelijkaardige producten aanbieden. Deze vorm van reclame kan door gebruikers ervaren worden als een inbreuk op hun privacy.
+\subsection{Sociale media advertenties }
+\label{sec Sociale media advertenties }
+Sociale media advertenties zijn reclame blokken op sociale netwerk diensten zoals Facebook, Twitter en Instagram. Een van de grote voordelen van deze manier van reclame maken is dat adverteerders kunnen profiteren van de grote hoeveelheid informatie die sociale media hebben over hun gebruikers. Adverteerders kunnen hun advertenties zo veel beter richten op het juiste doelpubliek.
 \section{Reclame netwerken}
 \label{sec:Reclame netwerken}
-Ongeveer 70\% van de online advertentie-inkomsten is komt uit de top tien advertentie netwerken.
+Een advertentienetwerk is een organisatie die als tussenpersoon dient tussen webpagina's en adverteerders. Een advertentienetwerk zal advertentieruimte van webpagina's verzamelen om deze dan te kunnen aanbieden aan adverteerders. Deze netwerken zijn er gekomen omdat het voor webpagina's moeilijk is om advertenties te verzamelen en voor adverteerders moeilijk is om advertentie ruimte te vinden voor hun doelpubliek. Naast reclame netwerken zijn er ook nog ad exchanges. Het verschil is dat men bij netwerken advertentie ruimte koopt en bij exchanges koopt men doelpubliek. Daarnaast werken exchanges via programmatisch kopen, waarbij de adverteerders in real-time bieden op het doelpubliek.
+
 
 \section{Inkomsten uit reclame}
 \label{sec:Inkomsten uit reclame}
 Volgens het Internet Advertising Revenu verslag \cite{Silverman2015} van het Interactive Advertising Bureau, IAB, steeg de totale uitgave aan internet reclame in 2014 wereldwijd tot een historisch hoogtepunt van 135 miljard Amerikaanse dollar, met een gemiddelde groei van 17\% jaar-op-jaar.
 \begin{figure}[h!]
 \centering
-\includegraphics[width=7cm]{img/AdvertisingRevenueYearly}
+\includegraphics[width=12cm]{img/AdvertisingRevenueYearly}
 \caption{Globale jaarlijkse uitgaven aan internet reclame en de voorspelling tot 2018(Miljard U.S. Dollar)}
 \label{fig: AdvertisingRevenueYearly}
 \end{figure} 
@@ -341,7 +347,7 @@ De analyses van verschillende studies \citep{Silverman2015,BI-Insider2016, EMark
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=7cm]{img/advRevGrowthFormat}
+\includegraphics[width=12cm]{img/advRevGrowthFormat}
 \caption{Voorspelling groei omzet onderverdeeld op media}
 \label{fig: Advertising revenue growth forecast by format}
 \end{figure} 
@@ -374,10 +380,10 @@ Adblock\footnote{\url{https://getadblock.com/}} is een gratis en opensource exte
 
 \subsection{Ghostery}
 \label{sec:Ghostery}
-
+Ghostery is een gratis extensie maar niet opensource. De extensie is beschikbaar voor  Mozilla Firefox, Google Chrome, Microsoft Internet Explorer, Opera, en Safari. Ghostery Inc. is het bedrijf achter de extensie en biedt de extensie gratis aan maar verkoopt de gegevens, over de trackers en advertenties die het blokkeert, door aan derden. Ghostery focust zich voornamelijk op het beschermen van de privacy van zijn gebruikers door het blokkeren van trackers, maar verwijdert ook reclame.
 \subsection{Brave}
 \label{sec:Brave}
-
+Brave is een browser die een ingebouwde ad blocker heeft en is dus geen extensie die werkt op andere browsers. De browser blokkeert niet alleen reclame en trackers maar vervangt de reclame ook met eigen advertenties. De browser is ontwikkeld door de mede oprichter van het Mozilla Project, het team achter de gelijknamige browser. Brave belooft een stuk van de inkomsten aan advertenties te delen met zowel de gebruikers als de oorspronkelijke adverteerders die hun reclame verwijderd zagen.
 
 \section{Werking van ad blockers}
 \label{ch:Werking van ad blockers}
@@ -416,7 +422,7 @@ Sommige ad blockers zoals Adblock Plus en µBlock Origin beschikken over een han
 Het business model van de instanties achter ad blockers verschilt sterk van organisatie tot ad organisatie. Er zijn ad blockers zoals µBlock Origin die volledig open source zijn en zelfs donaties weigeren. Daarnaast zijn er bedrijven zoals AdBlock die op zoek gaan naar donaties voor hun inkomsten. Anderen zoals Ghostery verzamelen, als de gebruiker hier in toestemt, informatie over de trackers en reclames op de websites die de gebruikers bezoeken. Het is belangrijk om te benadrukken dat ze geen gebruikers informatie verzamelen maar wel informatie over de bezochte website en de trackers. Die verzamelde data verkopen ze dan door aan derden.
 \subsection{ Accepteable ad's program}
 \label{sec:Accepteable ad's program}
-Naast bovenstaande methodes is er nog een andere manier om geld te verdienen aan ad blocking, namelijk geld vragen om advertenties niet te blokkeren. Dit is het business model van Adblock Plus en is omstreden omdat hun Accepteable ad's program procedure verdacht veel lijkt op afpersing. Eén van de grote hekelpunten was dat  het systeem werkt niet transparant genoeg werkt. Pas in december 2016 is Adblock Plus voor het eerst open geweest over hoe ze hun inkomsten vergaren. Sindsdien is op hun website een apart topic te vinden waarin uitgelegd wordt hoe ze gefinancierd worden. Een deel van de inkomsten verkijgen ze nog steeds via donaties van gebruikers.
+Naast bovenstaande methodes is er nog een andere manier om geld te verdienen aan ad blocking, namelijk geld vragen om advertenties niet te blokkeren. Dit is het business model van Adblock Plus en is omstreden omdat hun Accepteable ad's program procedure verdacht veel lijkt op afpersing. Eén van de grote hekelpunten was dat  het systeem niet transparant genoeg werkt. Pas in december 2016 is Adblock Plus voor het eerst open geweest over hoe ze hun inkomsten vergaren. Sindsdien is op hun website een apart topic te vinden waarin uitgelegd wordt hoe ze gefinancierd worden. Een deel van de inkomsten verkijgen ze nog steeds via donaties van gebruikers.
 Maar de grootste bron van inkomsten gebeurt via het Acceptable Ads program waarin ze webpagina's aan een whitelist toevoegen. De advertenties, die zich bevinden op de webpagina's die op die whitelist staan, worden niet geblokkeerd. 
 Adblock Plus maakt voor whitelisting een onderscheid tussen grote en kleine advertentie eenheden. Een eenheid wordt als groot beschouwd als er een winst is van meer dan 10 miljoen extra advertentievertoningen per maand, door deelname aan het Acceptable Ads initiatief. Slechts 10\% van de whitelisting certificaten behoren tot de groep ‘grote ondernemingen’. Deze grote eenheden betalen een licentievergoeding voor het plaatsen van advertenties op de lijst. Deze vergoeding bedraagt normaal gesproken 30\% van de extra inkomsten die behaald worden door de whitelisting. 90\% van de certificaten worden echter gratis toegekend, aan kleinere advertentie eenheden. Het betalen van een licentievergoeding staat volledig los van de criteria om toegelaten te worden op de Whitelist. Zolang de Acceptable Ads criteria niet voldaan zijn, is er geen sprake van whitelisting. Er is dus geen enkele mogelijkheid om voor een advertentie die niet aan de Acceptable Ads criteria voldoet, een plaatsje op de lijst te kopen. Om de transparantie naar de buitenwereld te vergroten heeft Adblock Plus besloten om alle whitelisted advertenties en deelnemende eenheden publiek te maken op het forum van Adblock Plus \footnote{\url{https://adblockplus.org/forum/viewforum.php?f=12}}
 De inkomsten van de licentievergoedingen worden onder andere gebruikt voor het onderhouden van Acceptable Ads list. Er werken vrijwilligers mee via de Adblock Plus forum community, maar het grootste deel van het beheer van de lijst (contacten met adverteerders, voortdurende controle, technische ondersteuning, …) wordt gedaan  door Eyeo GmbH, het bedrijf achter Adblock Plus.
@@ -424,6 +430,9 @@ De inkomsten van de licentievergoedingen worden onder andere gebruikt voor het o
 
 \chapter{Evolutie gebruik Ad blockers}
 \label{ch:Evolutie gebruik Ad blockers}
+
+\section{Groei}
+\label{sec:Groei}
 Eind 2015 werd wereldwijd de kaap van 200 miljoen maandelijks actieve ad block gebruikers overschreden \citep{PageFair2015}. Over het volledige jaar 2015 waren er bijna 3.2 miljard\footnote{\url{ http://www.internetlivestats.com/internet-users/\#trend}} actieve internet gebruikers. Dit betekent dat meer dan 6.25\% van de internet gemeenschap een ad blocker gebruikt. Verwacht wordt dat dit percentage de komende jaren enkel maar zal stijgen. Wanneer de trend van de voorbije jaren zich voortzet dan zal het aantal gebruikers van een ad blocker jaarlijks met meer dan 40\% blijven stijgen \ref{fig: adblock-growth}.
 \begin{figure}[h!]
 \centering
@@ -431,6 +440,9 @@ Eind 2015 werd wereldwijd de kaap van 200 miljoen maandelijks actieve ad block g
 \caption{Groei van het aantal maandelijks actieve ad block gebruikers}
 \label{fig: adblock-growth}
 \end{figure}
+
+
+
 \section{Spreiding}
 \label{sec:Spreiding}
 In 2014 en opnieuw in 2015 verzamelde PageFair samen met Adobe informatie omtrent het gebruik van ad blockers \citep{PageFair2015,PageFair2014}.
@@ -486,7 +498,7 @@ Ad blocking op mobiele toestellen staat dus nog in zijn kinderschoenen.
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=7cm]{img/MobileVsDeskotpInternet}
+\includegraphics[width=12cm]{img/MobileVsDeskotpInternet}
 \caption{Groei van het aantal maandelijkse actieve gebruikers voor Firefox en Chrome}
 \label{fig: MobileVsDeskotpInternet}
 \end{figure}
@@ -497,7 +509,7 @@ Bij webpagina's met een technisch slimmer publiek kan het gebruik van een ad blo
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=7cm]{img/percontent}
+\includegraphics[width=15cm]{img/percontent}
 \caption{Het aandeel van ad blockers per categorie van de webpagina, wereldwijd}
 \label{fig: percontent}
 \end{figure}
@@ -545,7 +557,7 @@ Uit het onderzoek van Pagefair samen met Adobe, \cite{PageFair2015}, blijkt dat 
 \subsection{Beveiliging}
 \label{sec Beveiliging}
 Ad blockers zijn in staat je computer te beschermen tegen malvertising. Malvertising zijn advertenties die opzettelijk bewerkt zijn met malware om de computers te besmetten van iedereen die de site waarop de advertentie staat bezoekt, ook al wordt de besmette advertentie niet eens aangeklikt. 
-In de advertentie zit een stuk code dat zelfs zonder dat de advertentie geladen wordt, de computer beveiliging, van de gebruikers, onderzoekt, en dan beslist welk stuk van malware doorgestuurd wordt naar de computer. Er worden stukken software (adware) geinstalleerd op de harde schijf die je computer openstellen voor gegevensdiefstal en andere cybercriminaliteit. Als de computer door malware geïnfecteerd is, zijn de online banking gegevens, credit card informatie, Burger Service Nummers, wachtwoorden enz. niet meer veilig. 
+In de advertentie zit een stuk code dat zelfs zonder dat de advertentie geladen wordt, de computer beveiliging, van de gebruikers, onderzoekt, en dan beslist welk stuk van malware doorgestuurd wordt naar de computer. Er worden stukken software (adware) geinstalleerd op de harde schijf die je computer openstellen voor gegevensdiefstal en andere cybercriminaliteit. Als de computer door malware geïnfecteerd is, zijn de online banking gegevens, credit card informatie, wachtwoorden en andere gevoelige informatie niet meer veilig. 
 Ad blockers kunnen dus gebruikt worden om zichzelf te beschermen tegen malware ( Trojan horses, wormen, spy- en adware en andere virussen). Het uitschakelen van bekende malware domeinen wordt gedaan door een nieuw filter abonnement, Malware Protection, toe te voegen. Maar een ad blocker is geen echt antivirusprogramma, het is niet aan te raden speciaal ontworpen antivirussen te vervangen door een ad blocker. 
 
 \subsection{Laadsnelheid en bandbreedte}
@@ -558,7 +570,7 @@ In dit onderzoek werden 12 belangrijke websites betrokken. De gegevens van het d
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=7cm]{img/LoadTimes}
+\includegraphics[width=12cm]{img/LoadTimes}
 \caption{Laadtijden met en zonder ad blocker van verschillende webpagina's}
 \label{fig: Redenadblockreclame}
 \end{figure}
@@ -578,8 +590,10 @@ De grootste motieven voor mensen die zeker overwegen een ad blocker te installer
 Veel advertentiebedrijven begrijpen de redenen voor gebruik van ad blockers namelijk: snelheid, privacy, beveiliging en een webpagina zonder afleidingen. Ze beginnen te begrijpen dat voor een internet met reclame, de reclame minder agressief en storend moet worden.
 \section{Impact op de internet gebruiker}
 \label{sec:Impact op de internet gebruiker}
-\section{Impact op de economie}
-\label{sec:Impact op de economie}
+\section{Impact op de webpagina's}
+\label{sec:Impact op de webpagina's}
+Advertenties zorgen vaak voor een groot stuk van de inkomsten op webpagina's, sommige websites zijn zelfs volledig afhankelijk van advertenties voor hun inkomsten. De advertenties betalen voor de infrastructuur en betalen de mensen die instaan voor het onderhoud en de inhoud van een webpagina. Wereldwijd werd er in 2015 149.2 miljard dollar gespendeerd aan internet reclame. Het totale verlies aan reclame inkomsten door ad blockers bedroeg in 2015 21.88 miljard dollar \cite{PageFair2015}. Webpagina's lopen globaal gezien dus bijna 13\% van hun inkomsten mis door ad blockers. Uit interviews met verschillende content creators op YouTube en nieuws websites blijkt dat het verlies aan inkomsten oneven verdeeld is. Bij een Youtuber met de naam Driftor, die voornamelijk video's maakt die gerelateerd zijn aan videogames, loopt het verlies aan inkomsten soms op tot 45\%. Dit ligt in lijn met de onderzoeksresultaten uit hoofdstuk \ref{sec Spreiding over de verschillende content}, waaruit blijkt dat webpagina's met een grote focus op video games het grootste percentage ad block gebruikers hebben. Ook een andere Youtuber met de naam Barnacules Nerdgasm die video's maakt met een zeer technische inhoud en met onderwerpen zoals Bitcoins en 3D printing ziet meer dan 13\% van zijn inkomsten verloren gaan. Uit het interview met Barnacules blijkt dat hij 35\% van zijn doelpubliek een ad blocker gebruikt maar dat dit aantal al meer dan een jaar constant is doordat een groot stuk van zijn publiek overschakelt naar mobiele toestellen om zijn video's te bekijken. Doordat het gebruik van ad blockers op smartphones nog niet ingeburgerd is kan hij het verlies aan inkomsten door het stijgend aantal ad blockers op desktop compenseren.
+Uit een interview met Peter Soetens, directeur digitale nieuwsmedia van het Mediahuis, blijkt dat ook bij hen het verlies aan inkomsten meevalt door het steeds groter aandeel van mobiele bezoekers. Mediahuis is een Belgisch mediabedrijf dat naast kranten zoals De Standaard, Het Nieuwsblad en de Gentenaar ook websites zoals Jobat heeft. Dagelijks heeft Mediahuis 1.3 miljoen digitale bezoekers waarbij op desktop 18\% van de bezoekers een ad blocker gebruikt en op mobiel minder dan 1\% een ad blocker gebruikt. Peter Soetens wist te zeggen dat het gebruik van ad blockers zeker een zorg is maar zolang het gebruik bij mobiele gebruikers laag blijft, vormen ad blockers geen echte bedreiging voor Mediahuis.
 
 
 \chapter{Hoe wapenen bedrijven zich tegen ad blockers}
@@ -613,9 +627,9 @@ Een ander probleem zijn de beperkte technische mogelijkheden voor het detecteren
 \\
 De enige tool die er tot nu toe altijd in slaagde om elke ad blocker te detecteren is BlockAdblock \footnote{\url{http://blockadblock.com/}}.
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
-\includegraphics[width=7cm]{img/Adblockblock}
+\includegraphics[width=12cm]{img/Adblockblock}
 \caption{Gebruikers die beweren ad block uit schakelen wanneer toegang wordt geweigerd}
 \label{fig: Adblockblock}
 \end{figure}
