--- a/draft/tin-bachproef.bib
+++ b/draft/tin-bachproef.bib
@@ -1,28 +1,4 @@
-@book{Knuth1998,
- author = {Knuth, Donald E.},
- title = {The art of computer programming,  volume 3: (2nd ed.) sorting and searching},
- year = {1998},
- publisher = {Addison Wesley Longman Publishing Co., Inc.},
- address = {Redwood City, CA, USA}
-}
 
-@book{Pollefliet2011,
-  author = {Pollefliet, Leen},
-  title = {Schrijven van verslag tot eindwerk: do's en don'ts},
-  year = {2011},
-  publisher = {Academia Press},
-  address = {Gent}
-}
-
-@article{Creeger2009,
-  author = {Creeger, Mache},
-  journal = {Communications of the ACM},
-  number = {8},
-  pages = {50--56},
-  title = {{CTO Roundtable: Cloud Computing}},
-  volume = {52},
-  year = {2009}
-}
 
 @online{Chromeappstore2016,
 	url={https://chrome.google.com/webstore/search/ad%20block?utm_source=chrome-ntp-icon&_category=extensions},
@@ -37,50 +13,59 @@
 	year={2016}
 }
 
-@online{PerformanceAB,
+@article{PerformanceAB,
   author = {Firefoxcvp},
   title = {Best Ad Blocker tested for performance},
   year = {2015},
-  url = {http://firefoxcvp.com/best-ad-blocker-tested-for-performance/},
+  howpublished = {\url{http://firefoxcvp.com/best-ad-blocker-tested-for-performance/}},
+	note = { accessed 12 March 2016},
   urldate = {2016-23-03}
 }
 
 @article{PageFair2015,
 	author={PageFairTeam},
 	title={The cost of ad blocking},
+	note     = {Online, accessed 01 March 2016},
 	year={2015},
-	url={https://blog.pagefair.com/2015/ad-blocking-report/},
+	howpublished = {\url{https://blog.pagefair.com/2015/ad-blocking-report/}},
 	
 }
 @article{PageFair2014,
 	author={PageFairTeam},
-	title={The cost of ad blocking},
+	title={The adblocking-report},
 	year={2014},
-	url={https://blog.pagefair.com/2014/adblocking-report/},
-
+	note = {Online, accessed 01 March 2016},
+	howpublished = {\url{https://blog.pagefair.com/2014/adblocking-report/}},
+ 
 }
+
 @article{Chaffey2016,
   author = {Chaffey, Dave},
   journal = {smartinsights},
+	note     = {Online, accessed 16 March 2016},
   title = {{Display advertising clickthrough rates
 }},
   year = {2016}
+	
 }
 @book{Silverman2015,
  author = {Silverman, David},
  title = {Internet Advertising Revenue Report},
+note     = {Online, accessed 16 March 2016},
  year = {2015},
  publisher = {Internet Advertising Bureau},
 }
 @article{BI-Insider2016,
   author = {Hoelzel, Mark},
   journal = {Business Insider, UK},
+	note     = {Online, accessed 16 March 2016},
   title = {The us digital media ad spend report},
   year = {2016}
 }
 @article{EMarketer2016,
   author = {eMarketer, E},
   journal = {eMarketer},
+	note     = {Online, accessed 28 March 2016},
   title = {Digital Ad Spending to Surpass TV Next Year
 },
   year = {2016}
@@ -88,6 +73,7 @@
 @article{pwc2015,
   author = {Hobbs,Matthew},
   journal = {pwc},
+	note     = {Online, accessed 16 March 2016},
   title = {internet-advertising insights
 },
   year = {2015}
@@ -95,6 +81,7 @@
 @article{IAB2014,
   author = {Friend,B},
   journal = {IAB},
+	note     = {Online, accessed 20 April 2016},
   title = {IAB Ad Blocking Study
 },
   year = {2014}
@@ -103,6 +90,7 @@
  author = {Malcolm, Toms},
  title = {Adblock Plus Efficacy Study},
  year = {2015},
+ note     = {Online, accessed 20 April 2016},
  publisher = {Simon Frazer University},
 }
 @article{nytimes2015,
@@ -110,5 +98,6 @@
   journal = {IAB},
   title = {The Cost of Mobile Ads on News Websites
 },
+note     = {Online, accessed 24 20 April 2016},
   year = {2015}
 }
