10k woorden: alle body + Eerste stuk conclusie

--- a/draft/tin-bachproef.bib
+++ b/draft/tin-bachproef.bib
@@ -21,7 +21,14 @@
 	note = { accessed 12 March 2016},
   urldate = {2016-23-03}
 }
-
+@article{Lean2015,
+  author = {Cunningham,Scott},
+  title = {Getting LEAN with Digital Ad UX},
+  year = {2015},
+  howpublished = {\url{http://www.iab.com/news/lean/}},
+	note = { accessed 12 may 2016},
+  urldate = {2015-10-15}
+}
 @article{PageFair2015,
 	author={PageFairTeam},
 	title={The cost of ad blocking},
@@ -36,6 +43,14 @@
 	year={2014},
 	note = {Online, accessed 01 March 2016},
 	howpublished = {\url{https://blog.pagefair.com/2014/adblocking-report/}},
+ 
+}
+@article{ShareThrough2013,
+	author={Wilson,Emily},
+	title={Native Ads Vs. Display Ads},
+	year={2013},
+	note = {Online, accessed 14 April 2016},
+	howpublished = {\url{magnetmediafilms.com/blog/infographic-native-ads-vs-display-ads-and-how-mobile-fits-in}},
  
 }
 
